--- a/ourShef/src/main/resources/templates/home.html
+++ b/ourShef/src/main/resources/templates/home.html
@@ -27,7 +27,7 @@
             </div>
             <div class="row">
                 <div>
-                    <button class="btn btn-primary" onclick="location.href='#none'">
+                    <button class="btn btn-primary" onclick="location.href='/login/join'">
                         회원가입
                     </button>
                 </div>
