--- a/ourShef/src/main/resources/static/style.css
+++ b/ourShef/src/main/resources/static/style.css
@@ -148,7 +148,7 @@
 .joinForm input[type="file"]{
   display:inline-block
 }
-#join-profile-img {
+#joinForm-profile-img {
   width: 100px;
   border-radius: 50%;
 }
