--- a/ourShef/src/main/resources/templates/login/joinForm.html
+++ b/ourShef/src/main/resources/templates/login/joinForm.html
@@ -15,7 +15,7 @@
 <title>회원가입</title>
 </head>
 <style>
-.error-border-style {
+.error-border {
 	border: 1px solid red;
 }
 </style>
@@ -29,79 +29,63 @@
 			<div class="row text-center">
 				<div>
 					<p>
-						<img class="demo-img" id="join-profile-img" alt="쉐프 마크">
+						<img class="demo-img" id="joinForm-profile-img" alt="쉐프 마크">
 					</p>
 					<p>
-						<input th:name="joinProfileImg" value="" type="file"
-							id="join-profile-img-file" accept=".jpg, .png"
-							style="margin: 0; display: none;">
+						<input value="" type="file" th:field="*{joinFormProfileImgFile}"
+							accept=".jpg, .png" style="margin: 0; display: none;">
 					</p>
-					<div th:if="${errors?.containsKey('joinProfileImgRequiredError')}">
-						<div class="text-danger"
-							th:text="${errors['joinProfileImgRequiredError']}">프로필 이미지는
-							필수입니다.</div>
-					</div>
-					<div th:if="${errors?.containsKey('joinProfileImgExtError')}">
-						<div class="text-danger"
-							th:text="${errors['joinProfileImgExtError']}">이미지 파일만
-							가능합니다.</div>
-					</div>
+					<div class="text-danger" th:errors="*{joinFormProfileImgFile}">
+						프로필 이미지 오류</div>
 					<p>
-						<button class="btn btn-primary" id="btn-profile-img" type="button"
-							th:classappend="${errors?.containsKey('joinProfileImgRequiredError')}?'error-border-style':_">프로필
-							등록</button>
+						<button class="btn btn-primary" id="joinForm-btn-profile-img"
+							type="button">프로필 등록</button>
 					</p>
 				</div>
 				<div>
 					<p>
-						<input type="text" id="loginId" placeholder="아이디"
-							th:name="accountId" th:value="*{accountId}">
+						<input th:field="*{joinFormAccountId}" type="text"
+							placeholder="아이디" th:errorclass="error-border">
 					</p>
-					<div
-						th:if="${errors?.containsKey('passwordContainsNickNameError')}">
-						<div class="global-error text-danger"
-							th:text="${errors['passwordContainsNickNameError']}">패스워드
-							닉네임 포함 오류 메시지</div>
+					<div th:if="${#fields.hasGlobalErrors()}">
+						<p class="text-danger" th:each="err : ${#fields.globalErrors()}"
+							th:text="${err}">글로벌 오류 메시지</p>
 					</div>
-					<div th:if="${errors?.containsKey('password')}">
-						<div class="text-danger" th:text="${errors['password']}">패스워드
-							오류 메시지</div>
-					</div>
+
+
 					<p>
-						<input type="password" id="password" placeholder="비밀번호"
-							th:name="password" th:value="*{password}"
-							th:classappend="${errors?.containsKey('password')}or${errors?.containsKey('passwordContainsNickNameError')}?'error-border-style':_">
+						<div class="text-danger" th:errors="*{joinFormPassword}">패스워드
+						오류 메시지</div>
+						<input th:field="*{joinFormPassword}" type="password"
+							placeholder="비밀번호" th:errorclass="error-border">
+
 					</p>
+					
 					<p>
-						<input type="password" id="confirmPassword" placeholder="비밀번호 확인"
-							th:name="confirmPassword" th:value="*{confirmPassword}">
+						<input th:field="*{joinFormConfirmPassword}" type="password"
+							placeholder="비밀번호 확인" th:errorclass="error-border">
 					</p>
-					<div th:if="${errors?.containsKey('nickName')}">
-						<div class="text-danger" th:text="${errors['nickName']}">닉네임
-							오류 메시지</div>
-					</div>
+								
 					<p>
-						<input type="text" id="nickName" placeholder="닉네임"
-							th:name="nickName" th:value="*{nickName}"
-							th:classappend="${errors?.containsKey('nickName')}?'error-border-style':_">
+					<div class="text-danger" th:errors="*{joinFormNickName}">닉네임 오류 메시지</div>
+						<input th:field="*{joinFormNickName}" type="text" placeholder="닉네임"
+							th:errorclass="error-border">
 					</p>
-					<div th:if="${errors?.containsKey('selfIntroduction')}">
-						<div class="text-danger" th:text="${errors['selfIntroduction']}">자기소개
-							오류 메시지</div>
-					</div>
+					
+					
 					<p>
-						<textarea th:name="selfIntroduction"
-							th:value="*{selfIntroduction}" name="self-introduction" cols="25"
+						<div class="text-danger" th:errors="*{joinFormSelfIntroduction}">자기소개 오류 메시지</div>
+						<textarea th:field="*{joinFormSelfIntroduction}" cols="25"
 							rows="5" placeholder="100자 이내의 짦은 소개를 써주세요" maxlength="100"
-							style="resize: none;"
-							th:classappend="${errors?.containsKey('selfIntroduction')}?'error-border-style':_"></textarea>
+							style="resize: none;" th:errorclass="error-border"></textarea>
 					</p>
+					
 				</div>
 			</div>
 			<div class="row text-center">
-				<button class="btn btn-primary" id="btn-before" type="button"
-					onclick="location.href='/'">이전으로</button>
-				<button class="btn btn-primary" id="btn-join" type="submit">가입하기</button>
+				<button class="btn btn-primary" id="joinForm-btn-before"
+					type="button" onclick="location.href='/'">이전으로</button>
+				<button class="btn btn-primary" id="joinForm-btn-join" type="submit">가입하기</button>
 			</div>
 		</div>
 	</form>
