--- a/ourShef/src/main/resources/templates/home.html
+++ b/ourShef/src/main/resources/templates/home.html
@@ -32,7 +32,7 @@
                     </button>
                 </div>
                 <div>
-                    <button class="btn btn-primary" onclick="location.href='#none'">
+                    <button class="btn btn-primary" onclick="location.href='/login/login'">
                         로그인
                     </button>
                 </div>
