Login Using Filter

--- a/ourShef/src/main/resources/templates/login/loginForm.html
+++ b/ourShef/src/main/resources/templates/login/loginForm.html
@@ -56,7 +56,9 @@
             </div>
             <div class="row"></div>
         </div>
+        <!-- jQuery -->
+        <script src="/library/jquery-2.1.4.js"></script>
         <!--부트 스트랩-->
-        <script src="../js/bootstrap.js"></script>
+        <script src="../bootStrap/bootstrap.js"></script>
     </body>
 </html>
