SpotRegisterationForm SpotController etc

--- a/ourShef/src/main/resources/templates/login/loginHome.html
+++ b/ourShef/src/main/resources/templates/login/loginHome.html
@@ -123,7 +123,7 @@
                             recusandae molestias exerc
                         </div>
                         <div>
-                            <button class="btn btn-primary">로그아웃</button>
+                            <button class="btn btn-primary" type="button" onclick="location.href='/login/logout'">로그아웃</button>
                         </div>
                     </div>
                     <div class="my-spot-info">
@@ -137,7 +137,7 @@
                 </div>
                 <div class="col-sm-7">
                     <div>
-                        <button id="btn-spot-registration-i1" class="btn btn-primary">맛집 등록하기</button>
+                        <button id="btn-spot-registration-i1" class="btn btn-primary" type="button" onclick="location.href='/spot/registeration'">맛집 등록하기</button>
                     </div>
                     <div>
                         <button id="btn-my-spot-i1" class="btn btn-primary">나의 맛집</button>
