InitDB and ImgFileUploadSystem Modification

--- a/ourShef/src/main/resources/templates/login/joinForm.html
+++ b/ourShef/src/main/resources/templates/login/joinForm.html
@@ -86,7 +86,7 @@
 			</div>
 			<div class="row text-center">
 				<button class="btn btn-primary" id="joinForm-btn-before"
-					type="button" onclick="location.href='/'">이전으로</button>
+					type="button" onclick="location.href='/'">홈으로</button>
 				<button class="btn btn-primary" id="joinForm-btn-join" type="submit">가입하기</button>
 			</div>
 		</div>
