--- a/ourShef/src/main/resources/templates/login/loginForm.html
+++ b/ourShef/src/main/resources/templates/login/loginForm.html
@@ -49,7 +49,7 @@
                           <button class="btn btn-primary" type="submit">로그인</button>
                         </div>
                         <div>
-                          <button class="btn btn-primary" type="button">뒤로가기</button>
+                          <button class="btn btn-primary" type="button" onclick="location.href='/'">홈으로</button>
                         </div>
                     </form>
                 </div>
