--- a/ourShef/src/main/resources/templates/login/loginHome.html
+++ b/ourShef/src/main/resources/templates/login/loginHome.html
@@ -1,158 +1,237 @@
 <!DOCTYPE html>
-<html lang="ko">
-    <head>
-        <meta charset="UTF-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+<html lang="ko" xmlns:th="http://www.thymeleaf.org">
+<head>
+<meta charset="UTF-8">
+<meta http-equiv="X-UA-Compatible" content="IE=edge">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <!--부트 스트랩-->
-        <link rel="stylesheet" href="../../bootStrap/bootstrap-theme.css">
-        <link rel="stylesheet" href="../../bootStrap/bootstrap.css">
+<!--부트 스트랩-->
+<link rel="stylesheet" href="../../bootStrap/bootstrap-theme.css">
+<link rel="stylesheet" href="../../bootStrap/bootstrap.css">
 
-        <!-- slick slider-->
-        <link rel="stylesheet" href="../../library/slick/slick-theme.css">
-        <link rel="stylesheet" href="../../library/slick/slick.css">
+<!-- slick slider-->
+<link rel="stylesheet" href="../../library/slick/slick-theme.css">
+<link rel="stylesheet" href="../../library/slick/slick.css">
 
-        <!--css-->
-        <link rel="stylesheet" href="../../style.css">
+<!--css-->
+<link rel="stylesheet" href="../../style.css">
 
-        <title>Document</title>
-    </head>
-    <body class="loginHome">
-        <div class="container text-center">
-            <div class="row">
-                <h1>로그인 홈</h1>
-            </div>
-            <div class="row">
-                <h3>최근에 업데이트 된 우리들의 맛집정보!</h3>
-            </div>
-            <div class="row">
-                <div class="user-spot-slider">
-                    <div>
-                        <div class="user-spot">
-                            <div class="user-info">
-                                <div class="img"><img class="img-circle demo-img" style="width: 50px"></div>
-                                <div>홍길동</div>
-                                <div>*****</div>
-                                <div>
-                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet tempore,
-                                    recusandae molestias exerc
-                                </div>
-                            </div>
-                            <div class="spot-info">
-                                <div>
-                                    <div><img class="img-rounded demo-img"></div>
-                                </div>
-                                <div>* * * * *</div>
-                                <div>식당 이름</div>
-                            </div>
-                        </div>
-                    </div>
-                    <div>
-                        <div class="user-spot">
-                            <div class="user-info">
-                                <div class="img"><img class="img-circle demo-img" style="width: 50px"></div>
-                                <div>홍길동</div>
-                                <div>*****</div>
-                                <div>
-                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet tempore,
-                                    recusandae molestias exerc
-                                </div>
-                            </div>
-                            <div class="spot-info">
-                                <div>
-                                    <div><img class="img-rounded demo-img"></div>
-                                </div>
-                                <div>* * * * *</div>
-                                <div>식당 이름</div>
-                            </div>
-                        </div>
-                    </div>
-                    <div>
-                        <div class="user-spot">
-                            <div class="user-info">
-                                <div class="img"><img class="img-circle demo-img" style="width: 50px"></div>
-                                <div>홍길동</div>
-                                <div>*****</div>
-                                <div>
-                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet tempore,
-                                    recusandae molestias exerc
-                                </div>
-                            </div>
-                            <div class="spot-info">
-                                <div>
-                                    <div><img class="img-rounded demo-img"></div>
-                                </div>
-                                <div>* * * * *</div>
-                                <div>식당 이름</div>
-                            </div>
-                        </div>
-                    </div>
-                    <div>
-                        <div class="user-spot">
-                            <div class="user-info">
-                                <div class="img"><img class="img-circle demo-img" style="width: 50px"></div>
-                                <div>홍길동</div>
-                                <div>*****</div>
-                                <div>
-                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet tempore,
-                                    recusandae molestias exerc
-                                </div>
-                            </div>
-                            <div class="spot-info">
-                                <div>
-                                    <div><img class="img-rounded demo-img"></div>
-                                </div>
-                                <div>* * * * *</div>
-                                <div>식당 이름</div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="row footer">
-                <div class="col-sm-8 my-spot">
-                    <div class="my-user-info">
-                        <div>
-                            <img class="img-circle demo-img" style="width: 100px;">
-                        </div>
-                        <div>홍길동</div>
-                        <div>*****</div>
-                        <div>
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet tempore,
-                            recusandae molestias exerc
-                        </div>
-                        <div>
-                            <button class="btn btn-primary" type="button" onclick="location.href='/login/logout'">로그아웃</button>
-                        </div>
-                    </div>
-                    <div class="my-spot-info">
-                        <div>
-                            <div><img class="img-rounded demo-img"></div>
-                        </div>
-                        <div>* * * * *</div>
-                        <div>식당 이름</div>
-                        <div>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsam suscipit voluptatibus nobis quos recusandae at animi assumenda, modi beatae dolor excepturi. Id sit consequuntur fugiat architecto eos laboriosam rerum magni.</div>
-                    </div>
-                </div>
-                <div class="col-sm-7">
-                    <div>
-                        <button id="btn-spot-registration-i1" class="btn btn-primary" type="button" onclick="location.href='/spot/registeration'">맛집 등록하기</button>
-                    </div>
-                    <div>
-                        <button id="btn-my-spot-i1" class="btn btn-primary">나의 맛집</button>
-                        <button id="btn-my-acquaintance-i1" class="btn btn-primary">지인 리스트</button>
-                    </div>
-                </div>
-            </div>
-            <!--jQuery-->
-            <script src="../../library/jquery-2.1.4.js"></script>
-            <!--cummon.js-->
-            <script src="../../common.js"></script>
-            <!--slik slider-->
-            <script src="../../library/slick/slick.js"></script>
-            <!--custom.js-->
-            <script src="../../js/loginHome.js"></script>
-        </div>
-    </body>
+<title>Document</title>
+</head>
+<body class="loginHome">
+	<div class="container text-center">
+		<div class="row">
+			<h1>로그인 홈</h1>
+		</div>
+		<div class="row">
+			<h3>최근에 업데이트 된 우리들의 맛집정보!</h3>
+		</div>
+		<div class="row">
+			<div class="user-spot-slider">
+				<div>
+					<div class="user-spot">
+						<div class="user-info">
+							<div class="img">
+								<img class="img-circle demo-img" style="width: 50px">
+							</div>
+							<div>홍길동</div>
+							<div>*****</div>
+							<div>Lorem ipsum dolor sit amet consectetur adipisicing
+								elit. Eveniet tempore, recusandae molestias exerc</div>
+						</div>
+						<div class="spot-info">
+							<div>
+								<div>
+									<img class="img-rounded demo-img">
+								</div>
+							</div>
+							<div>* * * * *</div>
+							<div>식당 이름</div>
+						</div>
+					</div>
+				</div>
+				<div>
+					<div class="user-spot">
+						<div class="user-info">
+							<div class="img">
+								<img class="img-circle demo-img" style="width: 50px">
+							</div>
+							<div>홍길동</div>
+							<div>*****</div>
+							<div>Lorem ipsum dolor sit amet consectetur adipisicing
+								elit. Eveniet tempore, recusandae molestias exerc</div>
+						</div>
+						<div class="spot-info">
+							<div>
+								<div>
+									<img class="img-rounded demo-img">
+								</div>
+							</div>
+							<div>* * * * *</div>
+							<div>식당 이름</div>
+						</div>
+					</div>
+				</div>
+				<div>
+					<div class="user-spot">
+						<div class="user-info">
+							<div class="img">
+								<img class="img-circle demo-img" style="width: 50px">
+							</div>
+							<div>홍길동</div>
+							<div>*****</div>
+							<div>Lorem ipsum dolor sit amet consectetur adipisicing
+								elit. Eveniet tempore, recusandae molestias exerc</div>
+						</div>
+						<div class="spot-info">
+							<div>
+								<div>
+									<img class="img-rounded demo-img">
+								</div>
+							</div>
+							<div>* * * * *</div>
+							<div>식당 이름</div>
+						</div>
+					</div>
+				</div>
+				<div>
+					<div class="user-spot">
+						<div class="user-info">
+							<div class="img">
+								<img class="img-circle demo-img" style="width: 50px">
+							</div>
+							<div>홍길동</div>
+							<div>*****</div>
+							<div>Lorem ipsum dolor sit amet consectetur adipisicing
+								elit. Eveniet tempore, recusandae molestias exerc</div>
+						</div>
+						<div class="spot-info">
+							<div>
+								<div>
+									<img class="img-rounded demo-img">
+								</div>
+							</div>
+							<div>* * * * *</div>
+							<div>식당 이름</div>
+							<div>등록일</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="row footer">
+			<div class="col-sm-8 my-spot">
+				<div class="my-user-info">
+					<div>
+						<img th:src="@{/img/userProfile}" th:class="img-circle"
+							class="img-circle demo-img" style="width: 100px;">
+					</div>
+					<div th:text="${loginUserDto.nickName}">홍길동</div>
+					<div id="reliabilitySystem-i1" class="reliabilitySystem">
+						<input class="input-reliability-size" type="hidden" value="-1">
+						<div class="reliabilityText">신뢰도</div>
+						<div class="gaugeBar">
+							<div class="back"></div>
+							<div class="front"></div>
+						</div>
+					</div>
+					<div th:text="${loginUserDto.introduction}">Lorem ipsum dolor
+						sit amet consectetur adipisicing elit. Eveniet tempore, recusandae
+						molestias exerc</div>
+					<div>
+						<button class="btn btn-primary" type="button"
+							onclick="location.href='/login/logout'">로그아웃</button>
+					</div>
+				</div>
+				<div class="my-spot-info">
+					<div>
+						<div>
+							<img th:src="@{/img/userRecentRegisterationSpot}"
+								th:class="img-rounded" class="img-rounded demo-img">
+						</div>
+					</div>
+					<div>나의 평점</div>
+					<div class="starPointSystem">
+						<input th:value="${loginUserRecentSpotDto.registrantStarPoint}"
+							th:name="starPoint" class="input-star-point" type="text"
+							value="10" required="required">
+						<div class="star-point-area">
+							<div class="star-front"></div>
+							<div class="star-back"></div>
+							<div class="click-areas">
+								<div class="click-area"></div>
+								<div class="click-area"></div>
+								<div class="click-area"></div>
+								<div class="click-area"></div>
+								<div class="click-area"></div>
+								<div class="click-area"></div>
+								<div class="click-area"></div>
+								<div class="click-area"></div>
+								<div class="click-area"></div>
+								<div class="click-area"></div>
+							</div>
+						</div>
+					</div>
+					<div th:if="${loginUserRecentSpotDto.getUsersStarPoint} == -1">
+						방문한 유저가 없습니다.
+					</div>
+					<div th:if="${loginUserRecentSpotDto.getUsersStarPoint} != -1">
+						<div>유저들 평점</div>
+						<div class="starPointSystem">
+							<input th:value="${loginUserRecentSpotDto.getUsersStarPoint}"
+								th:name="starPoint" class="input-star-point" type="text"
+								value="10" required="required">
+							<div class="star-point-area">
+								<div class="star-front"></div>
+								<div class="star-back"></div>
+								<div class="click-areas">
+									<div class="click-area"></div>
+									<div class="click-area"></div>
+									<div class="click-area"></div>
+									<div class="click-area"></div>
+									<div class="click-area"></div>
+									<div class="click-area"></div>
+									<div class="click-area"></div>
+									<div class="click-area"></div>
+									<div class="click-area"></div>
+									<div class="click-area"></div>
+								</div>
+							</div>
+						</div>
+					</div>
+
+					<div th:text = "${loginUserRecentSpotDto.getSpotName}">식당 이름</div>
+					<div>
+						<div>등록일</div>
+						<div th:text = "${#temporals.format(loginUserRecentSpotDto.getRegisteredTime, 'yyyy-MM-dd')}"></div>		
+					</div>
+					<div th:text = "${loginUserRecentSpotDto.getSpotIntroduction}">Lorem ipsum dolor sit amet consectetur adipisicing elit.
+						Ipsam suscipit voluptatibus nobis quos recusandae at animi
+						assumenda, modi beatae dolor excepturi. Id sit consequuntur fugiat
+						architecto eos laboriosam rerum magni.</div>
+				</div>
+			</div>
+			<div class="col-sm-7">
+				<div>
+					<button id="btn-spot-registration-i1" class="btn btn-primary"
+						type="button" onclick="location.href='/spot/registeration'">맛집
+						등록하기</button>
+				</div>
+				<div>
+					<button id="btn-my-spot-i1" class="btn btn-primary">나의 맛집</button>
+					<button id="btn-my-acquaintance-i1" class="btn btn-primary">지인
+						리스트</button>
+				</div>
+			</div>
+		</div>
+		<!--jQuery-->
+		<script src="../../library/jquery-2.1.4.js"></script>
+		<!--cummon.js-->
+		<script src="../../common.js"></script>
+		<!--slik slider-->
+		<script src="../../library/slick/slick.js"></script>
+		<!--custom.js-->
+		<script src="../../js/loginHome.js"></script>
+	</div>
+</body>
 </html>
